--- a/JS Fundamentals/package.json
+++ b/JS Fundamentals/package.json
@@ -1,11 +1,11 @@
 {
   "name": "js-fundamentals",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
     },
-
   "author": "",
   "license": "ISC",
   "type": "module",
@@ -15,6 +15,5 @@
   },
   "devDependencies": {
     
-  },
-  "description": ""
+  }
 }
